syntax = "proto3"; // 指定proto版本
package proto;     // 指定默认包名

// 指定golang包名
option go_package = "proto";

// 定义Hello服务
service Hello {
    // 定义SayHello方法
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

// 定义Hello服务
service Addition {
    // 定义SayHello方法
    rpc Addition(AdditionRequest) returns (AdditionResponse) {}
}
// AdditionResponse 响应结构
message AdditionResponse {
    int64 message = 1;
}

//AdditionResponse 请求结构
message AdditionRequest {
    int64 name = 1;
}

// HelloRequest 请求结构
message HelloRequest {
    string name = 1;
}

// HelloResponse 响应结构
message HelloResponse {
    string message = 1;
}